# ml-toolbox

./: .claude-hub-run.sh  .claude-hub-task.md  .claude-hub.jsonl  .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  VISION.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/sandbox/: Dockerfile  Dockerfile.base  runner.py
backend/sandbox/tests/: test_runner.py
backend/src/ml_toolbox/: config.py  main.py
backend/src/ml_toolbox/llm/: metadata.py
backend/src/ml_toolbox/nodes/: eda.py  (+21 more)
backend/tests/: conftest.py  test_api.py  test_category_encoder.py  test_classification_metrics.py  test_column_dropper.py  test_compute_stats.py  test_confusion_matrix.py  test_correlation_matrix.py  test_csv_reader.py  test_datetime_encoder.py  test_decision_tree.py  test_distribution_profile.py  test_e2e_smoke.py  test_evaluate_classification.py  test_excel_reader.py  test_executor.py  test_export_node.py  test_feature_creator.py  test_feature_eng.py  test_feature_importance.py  test_feature_selector.py  test_file_metadata.py  test_file_store.py  test_gradient_boosting.py  test_health.py  test_interaction_creator.py  test_linear_regression.py  test_log_transform.py  test_logistic_regression.py  test_missing_analysis.py  test_missing_value_imputer.py  test_model_comparison.py  test_model_port.py  test_outlier_detection.py  test_parquet_reader.py  test_protocol.py  test_random_forest.py  test_random_holdout.py  test_regression_metrics.py  test_roc_pr_curves.py  (+9 more)
backend/tests/integration/: test_node_connections.py  test_sandbox_e2e.py
(+155 files in other folders)
