[project]
name = "ml-toolbox"
version = "0.1.0"
description = "ML Toolbox backend — pipeline orchestration API"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "polars>=1.39",
    "pandas>=2",
    "pyarrow>=23",
    "docker>=7",
    "pydantic>=2",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pyright>=1.1",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_toolbox"]

[tool.pytest.ini_options]
markers = ["integration: requires Docker and sandbox image"]

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
